--- a/index.html
+++ b/index.html
@@ -14,13 +14,67 @@
         <h1 class="title">ESTATE '24</h1>
     </header>
     <main>
-        <section class="container row photos">
+        <section class=" container row gap-30 ">
             <div class="col">
                 <div class="photos">
                     <div  class="thumbtack">
                         <img src="./assets_day1/img/pin.svg" alt="">
                     </div>
-                    <div class="photos-img"></div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="photos">
+                    <div  class="thumbtack">
+                        <img src="./assets_day1/img/pin.svg" alt="">
+                    </div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="photos">
+                    <div  class="thumbtack">
+                        <img src="./assets_day1/img/pin.svg" alt="">
+                    </div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class=" container row gap-30 ">
+            <div class="col">
+                <div class="photos">
+                    <div  class="thumbtack">
+                        <img src="./assets_day1/img/pin.svg" alt="">
+                    </div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="photos">
+                    <div  class="thumbtack">
+                        <img src="./assets_day1/img/pin.svg" alt="">
+                    </div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col ">
+                <div class="photos">
+                    <div  class="thumbtack">
+                        <img src="./assets_day1/img/pin.svg" alt="">
+                    </div>
+                    <div class="photos-img">
+                        <div class="img-place-holder"></div>
+                    </div>
                 </div>
             </div>
         </section>
