--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body class="debug">
     <header>
+        
         <h1 class="title">ESTATE '24</h1>
     </header>
     <main>
@@ -21,7 +22,9 @@
                         <img src="./assets_day1/img/pin.svg" alt="">
                     </div>
                     <div class="photos-img">
-                        <div class="img-place-holder"></div>
+                        <div class="img-place-holder">
+                            <img src="" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -79,5 +82,7 @@
             </div>
         </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
