--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="title">ESTATE '24</h1>
     </header>
     <main>
-        <section class=" container row gap-30 ">
+        <section id="photo-card" class=" container row gap-30 ">
             <div class="col">
                 <div class="photos">
                     <div  class="thumbtack">
@@ -25,62 +25,14 @@
                         <div class="img-place-holder">
                             <img src="" alt="">
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col ">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder"></div>
+                        <div class="description">
+                            <h3>Lorem, ipsum dolor sit amet consectetur adipisicing </h3>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class=" container row gap-30 ">
-            <div class="col">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col ">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder"></div>
-                    </div>
-                </div>
-            </div>
-        </section>
+     
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./js/script.js"></script>
