feat add js  and style

--- a/index.html
+++ b/index.html
@@ -15,23 +15,12 @@
         <h1 class="title">ESTATE '24</h1>
     </header>
     <main>
-        <section id="photo-card" class=" container row gap-30 ">
-            <div class="col">
-                <div class="photos">
-                    <div  class="thumbtack">
-                        <img src="./assets_day1/img/pin.svg" alt="">
-                    </div>
-                    <div class="photos-img">
-                        <div class="img-place-holder">
-                            <img src="" alt="">
-                        </div>
-                        <div class="description">
-                            <h3>Lorem, ipsum dolor sit amet consectetur adipisicing </h3>
-                        </div>
-                    </div>
-                </div>
+        <section id="photo-card" class=" container row gap-30 "></section>
+        <div class="overlay">
+            <div>
+                <img src="" alt="">
             </div>
-        </section>
+        </div>
      
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
