--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     </header>
     <main>
         <section id="photo-card" class=" container row gap-30 "></section>
-        <div class="overlay">
-            <div>
-                <img src="" alt="">
-            </div>
+        <div>
+            <button class="btn-large">chiudi</button>
         </div>
+
+        <div class="overlay"></div>
+        <div class="place-holder-2"></div>
      
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
