feat add event listener

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </header>
     <main>
         <section id="photo-card" class=" container row gap-30 "></section>
-        <div>
-            <button class="btn-large">chiudi</button>
-        </div>
-
+      <div id="overlay-hidden" class="overlay-hidden">
+            <div>
+                <button class="btn-large">chiudi</button></div>
         <div class="overlay"></div>
-        <div class="place-holder-2"></div>
+        <div class="place-holder-2">
+            <img src="" alt="">
+        </div>
+    </div>
      
     </main>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
